--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
-<div class="banner-stub">
-  <h1>nice banner here</h1>
+<div class="project-banner">
+  <%= image_tag "stub-banner.jpg" %>
+    <h1 class="title"><%= @project.name %></h1>
 </div>
-<h1><%= @project.name %></h1>
 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-heading">Informationen</div>
