squeezed search in bootstrap grid, cleaned up app.html.erb (eleminated row wrapping and bootstrap2 span12 div)

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -4,8 +4,12 @@
 $bordersearch: #CCCCCC;
 $marginbetweenfilters: 1.5em;
 
+
 .border1pxsolidgrey {
   border: 1px solid $bordersearch;
+  &.col-md-3{
+    padding: 14px;
+  }
 }
 .widthout {
   width: 25%;
@@ -24,7 +28,7 @@ $marginbetweenfilters: 1.5em;
 }
 #static {
   margin: auto;
-  width: 70em;
+  //width: 70em;
 
 }
 .listProject {
