--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -276,94 +276,98 @@
 <% end %>
 
 <div id="video" class="row">
-
-  <video width="100%" height="300" autoplay loop muted poster="assets/communcity-explainer-poster.jpg">
-    <source src="assets/communcity-explainer.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+    <div class="col-md-12">
+      <video width="100%" height="300" autoplay loop muted poster="assets/communcity-explainer-poster.jpg">
+        <source src="assets/communcity-explainer.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
 </div>
 
 
-<div id="static">
+<div id="static" class="row">
+  <div class="col-md-3 border1pxsolidgrey staticheight">
+      <!-- Filter -->
+      <!--<div class="floatleft border1pxsolidgrey widthout staticheight">-->
+        <div id="filters">
+          <!--MyLocation-->
+          <div class="input-group input-group-sm" id="location">
+        <span class="input-group-addon clickimage" id="locationclick">
+          <span id="getlocation" class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
 
-  <!-- Filter -->
-  <div class="floatleft border1pxsolidgrey widthout staticheight">
-    <div id="filters">
-      <!--MyLocation-->
-      <div class="input-group input-group-sm" id="location">
-    <span class="input-group-addon clickimage" id="locationclick">
-      <span id="getlocation" class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+        </span>
+            <input id="locationinput" type="text" class="form-control" placeholder="Mein Standort" aria-describedby="sizing-addon3">
+          </div>
 
-    </span>
-        <input id="locationinput" type="text" class="form-control" placeholder="Mein Standort" aria-describedby="sizing-addon3">
-      </div>
+          <div id="slider-1" class="slider"></div>
+          Umkreis:
+          <div id="km"></div>
+          km
 
-      <div id="slider-1" class="slider"></div>
-      Umkreis:
-      <div id="km"></div>
-      km
+          <!--Tags-->
+          <div class="input-group input-group-sm" id="tags">
+        <span class="input-group-addon" id="addtagclick">
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 
-      <!--Tags-->
-      <div class="input-group input-group-sm" id="tags">
-    <span class="input-group-addon" id="addtagclick">
-      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        </span>
+            <input id="taginput" type="text" class="form-control" placeholder="Tags" aria-describedby="sizing-addon3">
+          </div>
 
-    </span>
-        <input id="taginput" type="text" class="form-control" placeholder="Tags" aria-describedby="sizing-addon3">
-      </div>
-
-      <div id="taglabels">
-      </div>
+          <div id="taglabels">
+          </div>
 
 
-      <!--Datepickers-->
-      <div id="DateRange">
+          <!--Datepickers-->
+          <div id="DateRange">
 
-        <div class="input-group input-group-sm">
-    <span class="input-group-addon clickimage" id="datepicker1click">
-      <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+            <div class="input-group input-group-sm">
+        <span class="input-group-addon clickimage" id="datepicker1click">
+          <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
 
-    </span>
-          <input type="text" class="form-control" placeholder="Von" aria-describedby="sizing-addon3" id="datepicker1">
+        </span>
+              <input type="text" class="form-control" placeholder="Von" aria-describedby="sizing-addon3" id="datepicker1">
+            </div>
+
+            <div class="input-group input-group-sm">
+        <span class="input-group-addon clickimage" id="datepicker2click">
+          <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+
+        </span>
+              <input type="text" class="form-control" placeholder="Bis" aria-describedby="sizing-addon3" id="datepicker2">
+            </div>
+
+          </div>
+
+          <!--ScoreSlider-->
+          <div id="SPSlider">
+            ScorePoints:
+            <div id="SP1" class="SP"></div>
+            -
+            <div id="SP2" class="SP"></div>
+            <div id="slider-2" class="slider"></div>
+          </div>
         </div>
 
-        <div class="input-group input-group-sm">
-    <span class="input-group-addon clickimage" id="datepicker2click">
-      <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+        <!--Legend for projects an location-->
 
-    </span>
-          <input type="text" class="form-control" placeholder="Bis" aria-describedby="sizing-addon3" id="datepicker2">
+        <div id="legend">
+
+          <div class="legendItem"><%= image_tag "red-circle-lv.png" %> Mein Standort</div>
+          <div class="legendItem"><%= image_tag "ylw-circle-lv.png" %> Projekte
+            <span class="badge"><%= Project.count(:id) %></span></div>
+
         </div>
 
-      </div>
-
-      <!--ScoreSlider-->
-      <div id="SPSlider">
-        ScorePoints:
-        <div id="SP1" class="SP"></div>
-        -
-        <div id="SP2" class="SP"></div>
-        <div id="slider-2" class="slider"></div>
-      </div>
-    </div>
-
-    <!--Legend for projects an location-->
-
-    <div id="legend">
-
-      <div class="legendItem"><%= image_tag "red-circle-lv.png" %> Mein Standort</div>
-      <div class="legendItem"><%= image_tag "ylw-circle-lv.png" %> Projekte
-        <span class="badge"><%= Project.count(:id) %></span></div>
-
-    </div>
 
   </div>
 
   <!-- Map -->
-  <div class="floatleft widthin staticheight" id="map-canvas"></div>
+<div class="col-md-6 staticheight" id="map-canvas"></div>
+  <!--<div class="floatleft widthin staticheight" id="map-canvas"></div>-->
 
   <!-- Projects -->
-  <div class="floatleft border1pxsolidgrey widthout staticheight">
+  <div class="col-md-3 border1pxsolidgrey staticheight">
+  <!--<div class="floatleft border1pxsolidgrey widthout staticheight">-->
 
     <div class="listProject">
       <div class="bold">Projekt 1: Kindergarten</div>
