--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -4,7 +4,7 @@
     </div>
 
 <div class="floatright">
-
+  <%= link_to image_tag("donate.jpg", height: "20"), "#"%>
   <%= link_to image_tag("facebook-icon.png", size: "16x16", alt: "Link to Facebook"), "http://www.facebook.com", target: "_blank" %>
 
 </div>
