--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li> <%= link_to  "Alle Projekte", projects_path%> </li>
         <li> <a href="#">Partner </a></li>
-        <li><a href="#">Spenden</a></li>
+        <!--<li><a href="#">Spenden</a></li>-->
         <%= yield :navitems %>
       </ul>
        <%= render "layouts/sign_in" %>
