--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -27,7 +27,7 @@
       </li>
     </ul>
   </div>
-  <div class="panel project-teaser box">
+  <div class="panel panel-default project-teaser box">
     <h3 class="title"><%= project.name %></h3>
     <%= image_tag "image1.JPG" %>
     <span class=" state <%= state_label_class project.state %>"><%= project.state %></span>
