fixed routing issue, created seperate controllers for user/orga show actions

--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -24,7 +24,7 @@
 
     <div>
       <ul class="list-unstyled">
-         <%= render partial: "project", collection: @organisation.projects%>
+         <%= render partial: "profiles/project", collection: @organisation.projects%>
       </ul>
     </div>
   <% end%>
