--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
   <% else%>
       <div>
         <ul class="list-unstyled">
-          <%= render partial: "project", collection: @user.projects%>
+          <%= render partial: "profiles/project", collection: @user.projects%>
         </ul>
       </div>
   <% end%>
