--- a/app/views/layouts/_sign_in.html.erb
+++ b/app/views/layouts/_sign_in.html.erb
@@ -28,7 +28,7 @@
         <% if user_signed_in?%>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= concat_username(current_user)%> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><%= link_to 'Mein Profil', controller: "profiles", action: "show_user", id: current_user %></li>
+              <li><%= link_to 'Mein Profil', user_path(current_user) %></li>
               <li><%= link_to 'Profil bearbeiten',edit_user_registration_path%></li>
               <li class="divider"></li>
               <li></span><%= link_to "Abmelden", destroy_user_session_path, method: :delete %></li>
@@ -36,9 +36,9 @@
         <% elsif organisation_signed_in?%>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_organisation.name%> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><%= link_to 'Profil ansehen', controller: "profiles", action: "show_organisation", id: current_organisation %></li>
-              <li><%= link_to 'Profil bearbeiten',edit_organisation_registration_path%></li>
               <li><%= link_to 'Neues Projekt erstellen', new_project_path%></li>
+              <li><%= link_to 'Profil ansehen', organisation_path(current_organisation) %></li>
+              <li><%= link_to 'Profil bearbeiten',edit_organisation_registration_path%></li>
               <li class="divider"></li>
               <li><%= link_to "Abmelden", destroy_organisation_session_path, method: :delete %></li>
             </ul>
