less static bannerization (still manual upload tho), added carousel component for bootstrap

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <div class="project-banner">
-  <%= image_tag "stub-banner.jpg" %>
+  <%= image_tag @project.banner_url %>
   <h1 class="title"><%= @project.name %></h1>
 </div>
 <div class="panel panel-default">
