--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,35 +1,36 @@
-<div class="col-md-4">
-  <div class="panel panel-default project-info">
-    <!-- Default panel contents -->
-    <div class="panel-heading"><%= link_to "#{project.name}", project %>
-      <span class="<%= state_label_class project.state %>"><%= project.state %></span></div>
-    <!-- List group -->
-    <ul class="list-group">
-      <li class="list-group-item">
-        <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-        <span class="sr-only">Ort: </span> <%= project.location %>
-      </li>
-      <li class="list-group-item">
-        <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-        <span class="sr-only">Verantalter: </span> <%= link_to project.organisation.name, organisation_path(project.organisation) %>
-      </li>
-      <li class="list-group-item">
-        <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-        <span class="sr-only">Start: </span> <%= project.date_from %>
-      </li>
-      <li class="list-group-item">
-        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-        <span class="sr-only">Dauer: </span> <%= project.duration %>
-      </li>
-      <li class="list-group-item">
-        <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-        <span class="sr-only">Prestige: </span> <%= project.score %>
-      </li>
-    </ul>
+
+  <div class="col-md-4">
+    <div class="panel panel-default project-info">
+      <!-- Default panel contents -->
+      <div class="panel-heading"><%= link_to "#{project.name}", project %>
+        <span class="<%= state_label_class project.state %>"><%= project.state %></span></div>
+      <!-- List group -->
+      <ul class="list-group">
+        <li class="list-group-item">
+          <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+          <span class="sr-only">Ort: </span> <%= project.location %>
+        </li>
+        <li class="list-group-item">
+          <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+          <span class="sr-only">Verantalter: </span> <%= link_to project.organisation.name, organisation_path(project.organisation) %>
+        </li>
+        <li class="list-group-item">
+          <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+          <span class="sr-only">Start: </span> <%= project.date_from %>
+        </li>
+        <li class="list-group-item">
+          <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+          <span class="sr-only">Dauer: </span> <%= project.duration %>
+        </li>
+        <li class="list-group-item">
+          <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+          <span class="sr-only">Prestige: </span> <%= project.score %>
+        </li>
+      </ul>
+    </div>
+    <div class="panel panel-default project-teaser box">
+      <h3 class="title"><%= project.name %></h3>
+      <%= link_to image_tag("small_"<<project.banner_url), project %>
+      <span class=" state <%= state_label_class project.state %>"><%= project.state %></span>
+    </div>
   </div>
-  <div class="panel panel-default project-teaser box">
-    <h3 class="title"><%= project.name %></h3>
-    <%= image_tag "image1.JPG" %>
-    <span class=" state <%= state_label_class project.state %>"><%= project.state %></span>
-  </div>
-</div>
