--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -11,7 +11,7 @@
       </li>
       <li class="list-group-item">
         <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-        <span class="sr-only">Verantalter: </span> <%= link_to project.organisation.name, controller: "profiles", action: "show_organisation", id: project.organisation %>
+        <span class="sr-only">Veranstalter: </span> <%= link_to project.organisation.name, controller: "profiles", action: "show_organisation", id: project.organisation %>
       </li>
       <li class="list-group-item">
         <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
