--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -271,7 +271,7 @@
 
 <div id="video" class="row">
 
-  <video width="100%" height="300" autoplay loop muted poster="assets/communcity-explainer-poster.jpg">
+  <video width="100%" height="300" autoplay muted poster="assets/communcity-explainer-poster.jpg">
     <source src="assets/communcity-explainer.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
