--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -3,7 +3,7 @@
     <div class="panel panel-default project-info">
       <!-- Default panel contents -->
       <div class="panel-heading"><%= link_to "#{project.name}", project %>
-        <span class="<%= state_label_class project.state %>"><%= project.state %></span></div>
+        </div>
       <!-- List group -->
       <ul class="list-group">
         <li class="list-group-item">
@@ -20,7 +20,7 @@
         </li>
         <li class="list-group-item">
           <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-          <span class="sr-only">Dauer: </span> <%= project.duration %>
+          <span class="sr-only">Dauer: </span> <%=  format_time_difference project.duration %>
         </li>
         <li class="list-group-item">
           <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
