--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -276,20 +276,10 @@
 <% end %>
 
 <div id="video" class="row">
-<<<<<<< HEAD
-
   <video width="100%" height="300" autoplay muted poster="assets/communcity-explainer-poster.jpg">
     <source src="assets/communcity-explainer.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-=======
-    <div class="col-md-12">
-      <video width="100%" height="300" autoplay loop muted poster="assets/communcity-explainer-poster.jpg">
-        <source src="assets/communcity-explainer.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
->>>>>>> d164e0d43f2e9f5cf91334262fbcda9ae5866b43
 </div>
 
 
@@ -415,9 +405,12 @@
 <hr>
 <div id="signup-large">
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <%= link_to "Jetzt Mitmachen!", new_user_registration_path, class:["btn","btn-success", "btn-gigantic"] %>
+    <div class="jumbotron">
+      <h1>Mach den ersten Schritt zum besseren Menschen!</h1>
+      <p>Werde Teil bei Communcity und nimm an verantwortungsvollen Projekten mit anderen interessanten Ehrenamtlichen teil.</p>
+      <p><%= link_to "Jetzt Mitmachen!", new_user_registration_path, class:["btn","btn-success", "btn-gigantic"] %></p>
     </div>
+
   </div>
  <% end%>
 </div>
