--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -23,56 +23,8 @@
     <% end %>
 <% end %>
 
-<%= content_tag(:h2, t("devise.titles.cancel_account")) %>
+<h3>Profil entfernen</h3>
 
-<p><%=
-    button_to(
-            t("Cancel my account"),
-            registration_path(resource_name), data: {
-                                                      confirm: t("devise.messages.cancel_account_confirmation"),
-                                                      method: :delete
-                                              }
-    )
-%></p>
-
-<p><%= link_to t("devise.links.back"), :back %></p>
-
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "Ich möchte nicht länger registriert sein.", registration_path(resource_name), data: { confirm: "Sind sie sicher, dass ihr Profil gelöscht werden soll?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
