--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -273,6 +273,7 @@
     <li> <a href="#static">Projekte entdecken </a></li>
     <li><a href="#top-projects">Top Projekte</a></li>
     <li><a href="#top-users">Top Helfer</a></li>
+    <li><a href="#signup-large">Teilnehmen</a></li>
 <% end %>
 
 <div id="video" class="row">
