slightly better layout on smaller screens

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -93,3 +93,8 @@ a.btn:visited{
   color: white;
 }
 
+@media (max-width: 1000px) {
+  h1, .h1, .jumbotron h1, .jumbotron .h1{
+    font-size: 30px;
+  }
+}
