--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,7 +1,7 @@
-  <div class="col-md-4">
+  <div class="col-md-4 col-xs-4">
     <div class="panel panel-default project-info">
       <!-- Default panel contents -->
-      <div class="panel-heading"><%= link_to "#{project.name}", project %>
+      <div class="panel-heading" style="overflow: hidden; white-space: nowrap"><%= link_to "#{project.name}", project %>
         </div>
       <!-- List group -->
       <ul class="list-group">
