--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,17 +9,17 @@
   <ul class="list-group">
     <li class="list-group-item">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
           <span class="sr-only">Ort: </span> <%= @project.location %>
         </div>
         <!--</li>
         <li class="list-group-item">-->
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
           <span class="sr-only">Verantalter: </span> <%= link_to @project.organisation.name, organisation_path(@project.organisation) %>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
           <span class="sr-only">Prestige: </span> <%= @project.score %>
         </div>
@@ -27,17 +27,17 @@
     </li>
     <li class="list-group-item">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
           <span class="sr-only">Start: </span> <%= @project.date_from %>
         </div>
         <!--</li>
         <li class="list-group-item">-->
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
           <span class="sr-only">Dauer: </span> <%=  format_time_difference @project.duration %>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-4">
           <span class="<%= state_label_class @project.state %>"><%= @project.state %></span>
         </div>
       </div>
@@ -46,7 +46,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-8 col-xs-8">
     <h2>Um was geht's?</h2>
 
     <p><%= @project.description %></p>
@@ -67,7 +67,7 @@
         </div>
     <% end %>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4 col-xs-4">
     <% if user_signed_in? %>
         <% unless @project.has_user?(current_user) %>
             <%= button_to "Jetzt Mitmachen", add_project_path, method: :post, class: ["btn", "btn-success", "btn-lg"] if @project.joinable? current_user %>
