--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -276,16 +276,18 @@
 <% end %>
 
 <div id="video" class="row">
-  <video width="100%" height="300" autoplay muted poster="assets/communcity-explainer-poster.jpg">
-    <source src="assets/communcity-explainer.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <div class="col-md-12">
+      <video width="100%" height="300" autoplay muted poster="assets/communcity-explainer-poster.jpg">
+        <source src="assets/communcity-explainer.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+  </div>
 </div>
 
 
 <div id="static" class="row">
     <h2>Projekte entdecken</h2>
-  <div class="col-md-3 border1pxsolidgrey staticheight">
+  <div class="col-md-3 col-xs-3 border1pxsolidgrey staticheight">
       <!-- Filter -->
       <!--<div class="floatleft border1pxsolidgrey widthout staticheight">-->
         <div id="filters">
@@ -361,11 +363,11 @@
   </div>
 
   <!-- Map -->
-<div class="col-md-6 staticheight" id="map-canvas"></div>
+<div class="col-md-6 col-xs-6 staticheight" id="map-canvas"></div>
   <!--<div class="floatleft widthin staticheight" id="map-canvas"></div>-->
 
   <!-- Projects -->
-  <div class="col-md-3 border1pxsolidgrey staticheight">
+  <div class="col-md-3 col-xs-3 border1pxsolidgrey staticheight">
   <!--<div class="floatleft border1pxsolidgrey widthout staticheight">-->
 
     <div class="listProject">
