date_from validation only on create

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li> <%= link_to  "Alle Projekte", projects_path%> </li>
-        <li> <a href="#">Partner </a></li>
+        <!--<li> <a href="#">Partner </a></li>-->
         <!--<li><a href="#">Spenden</a></li>-->
         <%= yield :navitems %>
       </ul>
