--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -17,7 +17,7 @@
         <li class="list-group-item">-->
         <div class="col-md-4">
           <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-          <span class="sr-only">Verantalter: </span> <%= link_to @project.organisation.name, organisation_path(@project.organisation) %>
+          <span class="sr-only">Veranstalter: </span> <%= link_to @project.organisation.name, organisation_path(@project.organisation) %>
         </div>
         <div class="col-md-4">
           <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
