Projekt anlegen Pfade korriegiert + JPG -> jpg

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -34,46 +34,46 @@
             <div class="row">
               <div class="col-sm-3 col-md-3">
                 <a class="thumbnail">
-                  <img src="../../assets/image1.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image1.jpg')">
+                  <img src="/assets/image15.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image15.jpg')">
                 </a>
                 <a class="thumbnail">
-                  <img src="../../assets/image2.jpg" alt="Image"  height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image2.jpg')">
+                  <img src="/assets/image2.jpg" alt="Image"  height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image2.jpg')">
                 </a>
                 <a class="thumbnail">
-                  <img src="../../assets/image3.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image3.jpg')">
-                </a>
-              </div>
-              <div class="col-sm-3 col-md-3">
-                <a class="thumbnail">
-                  <img src="../../assets/image4.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image4.jpg')">
-                </a>
-                <a class="thumbnail">
-                  <img src="../../assets/image5.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image5.jpg')">
-                </a>
-                <a class="thumbnail">
-                  <img src="../../assets/image6.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image6.jpg')">
+                  <img src="/assets/image3.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image3.jpg')">
                 </a>
               </div>
               <div class="col-sm-3 col-md-3">
                 <a class="thumbnail">
-                  <img src="../../assets/image7.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image7.jpg')">
+                  <img src="/assets/image4.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image4.jpg')">
                 </a>
                 <a class="thumbnail">
-                  <img src="../../assets/image8.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image8.jpg')">
+                  <img src="/assets/image5.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image5.jpg')">
                 </a>
                 <a class="thumbnail">
-                  <img src="../../assets/image9.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image9.jpg')">
+                  <img src="/assets/image6.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image6.jpg')">
                 </a>
               </div>
               <div class="col-sm-3 col-md-3">
                 <a class="thumbnail">
-                  <img src="../../assets/image10.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image10.jpg')">
+                  <img src="/assets/image7.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image7.jpg')">
                 </a>
                 <a class="thumbnail">
-                  <img src="../../assets/image11.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image11.jpg')">
+                  <img src="/assets/image8.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image8.jpg')">
                 </a>
                 <a class="thumbnail">
-                  <img src="../../assets/image12.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image12.jpg')">
+                  <img src="/assets/image9.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image9.jpg')">
+                </a>
+              </div>
+              <div class="col-sm-3 col-md-3">
+                <a class="thumbnail">
+                  <img src="/assets/image10.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image10.jpg')">
+                </a>
+                <a class="thumbnail">
+                  <img src="/assets/image11.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image11.jpg')">
+                </a>
+                <a class="thumbnail">
+                  <img src="/assets/image12.jpg" alt="Image" height="200em" width="200em" onclick="handleThumbnailClick(this, 'banners/image12.jpg')">
                 </a>
               </div>
 
